apps/60-services/docspell-native/base/statefulset-joex.yaml
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: docspell-joex
  labels:
    app: docspell
    component: joex
spec:
  serviceName: docspell-joex
  replicas: 1
  selector:
    matchLabels:
      app: docspell
      component: joex
  template:
    metadata:
      labels:
        app: docspell
        component: joex
    spec:
      tolerations:
        - key: node-role.kubernetes.io/control-plane
          operator: Exists
          effect: NoSchedule
      containers:
        - name: joex
          image: ghcr.io/docspell/joex:v0.43.0
          imagePullPolicy: IfNotPresent
          command:
            - /custom-entrypoint.sh
          args:
            - --
            - /opt/docspell.conf
          ports:
            - name: api
              containerPort: 7878
              protocol: TCP
          resources:
            requests:
              cpu: 500m
              memory: 2048Mi
            limits:
              cpu: 2000m
              memory: 4096Mi
          volumeMounts:
            - name: config
              mountPath: /opt/docspell.conf
              subPath: config
            - name: entrypoint
              mountPath: /custom-entrypoint.sh
              subPath: entrypoint.sh
              readOnly: true
      volumes:
        - name: config
          configMap:
            name: docspell-joex-config
        - name: entrypoint
          configMap:
            name: docspell-joex-entrypoint
            defaultMode: 0755
