apps/60-services/docspell-native/base/service-restserver.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: docspell-restserver
  labels:
    app: docspell
    component: restserver
spec:
  type: ClusterIP
  ports:
    - name: api
      port: 7880
      targetPort: 7880
      protocol: TCP
  selector:
    app: docspell
    component: restserver
