apps/60-services/docspell-native/base/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: docspell-restserver
  labels:
    app: docspell
    component: restserver
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-staging
    traefik.ingress.kubernetes.io/router.entrypoints: "web, websecure"
    traefik.ingress.kubernetes.io/router.middlewares: "services-redirect-to-https@kubernetescrd"
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - docspell.dev.truxonline.com
      secretName: docspell-tls
  rules:
    - host: docspell.dev.truxonline.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: docspell-restserver
                port:
                  number: 7880
